--- a/app/Pipfile
+++ b/app/Pipfile
@@ -25,6 +25,7 @@ sphinx = "*"
 sphinx-rtd-theme = "*"
 sphinxcontrib-httpdomain = "*"
 pycodestyle = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
