--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -83,6 +83,21 @@ jobs:
       run: pipenv run python tests/tests.py
       working-directory: ./app
 
+    - name: Run coverage
+      run: pipenv run coverage run --source=server tests/tests.py
+      working-directory: ./app
+
+    - name: Generate coverage report
+      run: pipenv run coverage xml
+      working-directory: ./app
+
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./app/coverage.xml
+        fail_ci_if_error: true
+
     - name: Change variables in app.yaml
       run: |
         sh ../deployment_automation/replace_variables.sh app.yaml
