--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -118,7 +118,7 @@ jobs:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       with:
         entrypoint: gcloud
-        args: app deploy ./app/app.yaml --quiet
+        args: app deploy ./app/app.yaml --quiet --stop-previous-version
 
 
 
